@@ -1,6 +1,6 @@
 @echo off
-
 REM
+REM  Copyright (c) 2024 Contributors to the Eclipse Foundation
 REM  Copyright (c) 2018, 2021 Oracle and/or its affiliates. All rights reserved.
 REM
 REM  This program and the accompanying materials are made available under the
@@ -16,7 +16,6 @@ REM
 REM  SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 REM
 
-
 VERIFY OTHER 2>nul
 setlocal ENABLEEXTENSIONS
 if ERRORLEVEL 0 goto ok
@@ -24,13 +23,16 @@ echo "Unable to enable extensions"
 exit /B 1
 
 :ok
-call "%~dp0..\config\asenv.bat"
+set AS_INSTALL=%~dp0..
+call "%AS_INSTALL%\config\asenv.bat"
 if "%AS_JAVA%x" == "x" goto UsePath
-set JAVA="%AS_JAVA%\bin\java"
+set JAVA=%AS_JAVA%\bin\java
 goto run
 
 :UsePath
 set JAVA=java
 
 :run
-%JAVA% -cp "%~dp0..\modules\webservices-api-osgi.jar;%~dp0..\modules\webservices-osgi.jar;%~dp0..\modules\jakarta.xml.bind-api.jar;%~dp0..\modules\jaxb-osgi.jar;%~dp0..\modules\jakarta.activation-api.jar;%~dp0..\modules\angus-activation.jar" com.sun.tools.xjc.Driver %*
+set AS_MODULES=%AS_INSTALL%\modules
+set WS_CLASSPATH=%AS_MODULES%\webservices-api-osgi.jar;%AS_MODULES%\webservices-osgi.jar:%AS_MODULES%\jakarta.xml.bind-api.jar:%AS_MODULES%\jaxb-osgi.jar:%AS_MODULES%\jakarta.activation-api.jar:%AS_MODULES%\angus-activation.jar
+%JAVA%  --module-path "%ASADMIN_MODULEPATH%" --add-modules ALL-MODULE-PATH -cp "%WS_CLASSPATH%" com.sun.tools.xjc.Driver %*
